Besouro-link updated

--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
 <h4>
 <a id="session-6" class="anchor" href="#session-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 40:</h4>
 <ul>
+<li> Download <a href="http://www.ee.oulu.fi/~ekarac/eclipse-besouro-0510.7z" target="blank">new Eclipse with Besouro Plugin</a>You should download it even if you donwloaded it previously</li>
+<ul>
+<li>Save eclipse-besouro-0510.7z to your Desktop</li>
+<li>Extract it to your desktop. (Right-click, select 7-Zip > Pura tänne)</li>
+<li>Run eclipse executable in eclipse-besouro-0510 folder</li>
+</ul>
 <li><a href="./sessions/session3.html" target="blank">Solid principles of Object-Oriented Programming</a> </li>
 
 <li><a href="./sessions/session4.html" target="blank">Test doubles - Mock objects</a> </li>
