--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Note that the lecture notes on TDD are available on Optima.<span class="Apple-co
   <li class="li6"><span class="s2"></span><span class="s1">Programming Assignment: Continue with Roman Numerals Task</span></li>
   <li class="li6"><span class="s2"></span><span class="s1">Programming Assignment: Simple Spreadsheet</span></li>
   <ul class="ul2">
-    <li class="li5"><span class="s2"><a href="file:///Users/ekarac/Desktop/SQATLab/tasks/SpreadSheet_TaskDescription.pdf"><span class="s3">Spreadsheet task description</span></a></span></li>
+    <li class="li5"><span class="s2"><a href="http://m3soulu.github.io/SQATLab/tasks/SpreadSheet_TaskDescription.pdf"><span class="s3">Spreadsheet task description</span></a></span></li>
     <li class="li6"><span class="s2"></span><span class="s1">Project repository on Github: <a href="https://github.com/SQATLab2016/Spreadsheet"><span class="s7">Spreadsheet project repository</span></a><span class="Apple-converted-space"> </span></span></li>
   </ul>
 </ul>
