--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
 <h4>
 <a id="session-7" class="anchor" href="#session-7" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 41:</h4>
 <ul>
-<li> TBA </li>
+<li> Continue with Spreadsheet task from last week. </li>
+<li> You should start working on Spreadsheet task even if you havent finished Roman Numerals task. Create a pull request for Roman Numerals task if you haven't done yet</li>
+<li> At the end of the lab, commit and push your changes ans create a pull request </li>
 </ul>
 
 <h4>
