--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <h4>
 <a id="session-8" class="anchor" href="#session-8" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 42:</h4>
 <ul>
-<li> Week 42 </li>
+<li> In class exercise </li>
 </ul>
 
 </section>
