--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
 <a id="session-8" class="anchor" href="#session-8" aria-hidden="true"><span class="octicon octicon-link"></span></a>Week 42:</h4>
 <ul>
 <li> In class exercise </li>
+<ul>
+<li> Download <a href="http://www.ee.oulu.fi/~ekarac/eclipse-neon-besouro.7z" target="blank"> eclipse-neon-besouro </a> and extract it to your desktop </li>
+<li> The instructions for the exercise will be given as hard-copy</li>
+</ul>
 </ul>
 
 </section>
